Add Window tracking using SetWinEventHook Move classes into utilities folder Project file cleanup

--- a/SRTPluginUIMGUDirectXOverlay/SRTPluginUIMGUDirectXOverlay.csproj
+++ b/SRTPluginUIMGUDirectXOverlay/SRTPluginUIMGUDirectXOverlay.csproj
@@ -1,24 +1,26 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <LangVersion>latest</LangVersion>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <OutputType>Library</OutputType>
+    <UseWPF>true</UseWPF>
     <Platforms>x86</Platforms>
     <Authors>Kapdap</Authors>
     <Company>Kapdap</Company>
-    <Copyright>Copyright © 2020 Kapdap</Copyright>
     <Product>Martian Gothic: Unification DirectX Overlay User Interface Plugin</Product>
     <Description>A user-interface plugin to display the values provided by the Martian Gothic: Unification Memory Provider Plugin in a DirectX overlay.</Description>
-    <Version>0.9.0.0</Version>
-    <FileVersion>0.9.0.0</FileVersion>
-    <AssemblyVersion>0.9.0.0</AssemblyVersion>
-    <!-- netcoreapp3.1 had to be hardcoded here because this project reports $(TargetFramework) as netstandard2.0 (rightfully so) and I am not sure how this project's csproj can auto-detect another project's framework version to copy it to the appropriate folder so we're just... hardcoding this. -->
-    <CopyDestionationPath>$(SolutionDir)..\SRTHost\SRTHost\bin\$(Configuration)\netcoreapp3.1\plugins</CopyDestionationPath>
-    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <Copyright>Copyright © 2020 Kapdap</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/kapdap/mgu-srt-ui-directx-overlay</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>speedrun</PackageTags>
+    <Version>0.9.0.0</Version>
+    <FileVersion>0.9.0.0</FileVersion>
+    <AssemblyVersion>0.9.0.0</AssemblyVersion>
+    <LangVersion>latest</LangVersion>
+    <EnableDefaultApplicationDefinition>false</EnableDefaultApplicationDefinition>
+    <CopyDestionationPath>$(SolutionDir)..\SRTHost\SRTHost\bin\$(Configuration)\netcoreapp3.1\plugins</CopyDestionationPath>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
